# brick-tq-shacl

./: .gitmodules  README.md  pyproject.toml
.github/workflows/: tests.yml
brick_tq_shacl/: __init__.py  check_java.py  pyshacl.py  topquadrant_shacl.py
brick_tq_shacl/_vendor/: __init__.py
tests/: test_integration.py
tests/fixtures/: Brick.ttl  brick_rules.ttl  sample_building.ttl  temperature_sensor_shape.ttl
