[project]
name = "brick-tq-shacl"
version = "0.4.0a12"
requires-python = ">=3.9,<4.0"
description = "Wraps topquadrant's SHACL implementation in a simple Python wrapper to be API-compatible with pySHACL"
authors = [
    { name = "Gabe Fierro", email = "gtfierro@mines.edu" }
]
license = "bsd-3-clause"
readme = "README.md"
dependencies = [
    "rdflib>=7.0",
    #"pytqshacl>=140",
    "pytqshacl[cli]",
    "pyontoenv>=0.3.1a1",
    "requests>=2.32.5",
    "oxrdflib>=0.5.0",
]

[project.optional-dependencies]
oxrdflib = ["oxrdflib>=0.3"]

[build-system]
build-backend  = 'hatchling.build'
requires       = ['hatchling']

[tool.uv.sources]
#pytqshacl = { path = "../software/pytqshacl", package = true}
pytqshacl = { git = "https://github.com/gtfierro/pytqshacl" }
