[project]
name = "brick-tq-shacl"
version = "0.4.1a1"
requires-python = ">=3.9,<4.0"
description = "Wraps topquadrant's SHACL implementation in a simple Python wrapper to be API-compatible with pySHACL"
authors = [
    { name = "Gabe Fierro", email = "gtfierro@mines.edu" }
]
license = "bsd-3-clause"
readme = "README.md"
dependencies = [
    "rdflib>=7.0",
    "pytqshacl[cli]",
    "pyontoenv>=0.3.1a1",
    "requests>=2.32.5",
]

[build-system]
build-backend  = 'hatchling.build'
requires       = ['hatchling']

[tool.uv.sources]
pytqshacl = { git = "https://github.com/gtfierro/pytqshacl" }

