[project]
name = "brick-tq-shacl"
version = "0.4.1a3"
requires-python = ">=3.9,<4.0"
description = "Wraps topquadrant's SHACL implementation in a simple Python wrapper to be API-compatible with pySHACL"
authors = [
    { name = "Gabe Fierro", email = "gtfierro@mines.edu" }
]
license = "bsd-3-clause"
readme = "README.md"
dependencies = [
    "rdflib>=7.0",
    "pyontoenv>=0.3.1a1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
]

[build-system]
build-backend  = 'hatchling.build'
requires       = ['hatchling']

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.hatch]
metadata.allow-direct-references = true
